tests/codegen/errors/reader/define-type-asm/atom.reader.error.reader.define.missing.paren/reader-define-missing-paren.mon
;; TEST-ID: tests.codegen.reader-error.reader-define-missing-paren
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/define-type-asm
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' to close define
;; TEST-ATOM: atom.reader.error.reader.define.missing.paren
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.define.missing.paren
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' to close define
;; TEST-READER-PATH: reader.c:3907 parser.define
;; TEST-CODEGEN-PATH: diagnostic.parser.define
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3907 Expected ')' to close define
;; TEST-USES-ATOM: atom.reader.error.reader.define.missing.paren
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.define
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/define-type-asm/atom.reader.error.reader.define.missing.paren
;; TEST-MENU-PATH: codegen/errors/reader/define-type-asm/atom.reader.error.reader.define.missing.paren
;; TEST-ATOM-LEAF: atom.reader.error.reader.define.missing.paren
;; TEST-CLI-TARGET: codegen errors reader define-type-asm

(module Main)
(define x 1
